# ISDProject

./: .gitignore  CONTRIBUTING.md  README.md  TeamNotes.md  pyproject.toml
.github/workflows/: ci.yml
iotbay/: __init__.py  __main__.py  auth.py  db.py
iotbay/model/: __init__.py  _base.py  access_log.py  device.py  order.py  order_item.py  payment.py  payment_method.py  user.py
iotbay/routes/: __init__.py  utils.py
iotbay/routes/api/: __init__.py  auth.py  device.py  order.py  payment.py  payment_method.py  user.py
iotbay/static/: index.css  index.js
iotbay/templates/: account.html  base.html  feedback.html  home.html  payment.html  payment_methods.html  register.html  sign-in.html
iotbay/templates/device/: catalogue.html  index.html  row.html
iotbay/templates/order/: index.html  row.html  table.html
tests/: conftest.py  test_feature_00.py  test_feature_03.py
