[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iotbay"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "peewee>=4.0.2",
    "gunicorn>=25.2.0",

    "python-dotenv>=1.2.2",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff.lint]
exclude = ["__labs"]

[project.scripts]
dev = "iotbay.__main__:dev"
prod = "iotbay.__main__:prod"

[tool.basedpyright]
reportUnusedCallResult = false